end tag css images jpg

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -26,9 +26,9 @@
             <div class="portfolio">
                 <a class="portfolio-logo" href="index.html">
                     <picture class="portfolio-logo__img">
-                        <source srcset="img/512/DmitriyFox_character_2.webp" type="image/webp">
-                        <source srcset="img/512/DmitriyFox_character_2.jpg" type="image/jpeg">
-                        <img src="img/512/DmitriyFox_character_2.jpg" alt="logo">
+                        <source srcset="img/124x124_.webp" type="image/webp">
+                        <source srcset="img/124x124_.jpg" type="image/jpeg">
+                        <img src="img/124x124_.jpg" alt="logo">
                     </picture>
                 </a>
                 <h1 class="portfolio__title">
@@ -37,103 +37,23 @@
                 <nav class="portfolio-nav">
                     <ul class="portfolio-nav__list">
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/0-header1.webp" type="image/webp">
-                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
-                                    <img src="img/512/0-header1.jpg" alt="tag">
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Art</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/DmitriyFox_character_5.webp" type="image/webp">
-                                    <source srcset="img/512/DmitriyFox_character_5.jpg" type="image/jpeg">
-                                    <img src="img/512/DmitriyFox_character_5.jpg" alt="tag" height="30">
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Characters</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Characters</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/DimF16_mecha.webp" type="image/webp">
-                                    <source srcset="img/512/DimF16_mecha.jpg" type="image/jpeg">
-                                    <img src="img/512/DimF16_mecha.jpg" alt="tag">
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Concept</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Concept</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/1.webp" type="image/webp">
-                                    <source srcset="img/512/1.jpg" type="image/jpeg">
-                                    <img src="img/512/1.jpg" alt="tag">
-                                </picture>
-                                <h2 class="portfolio-nav__tag">3D</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">3D</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/dimaf_gifts_illustration.webp" type="image/webp">
-                                    <source srcset="img/512/dimaf_gifts_illustration.jpg" type="image/jpeg">
-                                    <img src="img/512/dimaf_gifts_illustration.jpg" alt="tag"
-                                    >
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Abstract</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Abstract</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/DimF15_etching.webp" type="image/webp">
-                                    <source srcset="img/512/DimF15_etching.jpg" type="image/jpeg">
-                                    <img src="img/512/DimF15_etching.jpg" alt="tag"
-                                    >
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Graphic</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Graphic</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/DimFox13_Lion_editpol.webp" type="image/webp">
-                                    <source srcset="img/512/DimFox13_Lion_editpol.jpg" type="image/jpeg">
-                                    <img src="img/512/DimFox13_Lion_editpol.jpg" alt="tag"
-                                    >
-                                </picture>
-                                <h2 class="portfolio-nav__tag">HD</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">HD</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/DmitriyFox18_apple_Photography.webp" type="image/webp">
-                                    <source srcset="img/512/DmitriyFox18_apple_Photography.jpg" type="image/jpeg">
-                                    <img src="img/512/DmitriyFox18_apple_Photography.jpg"
-                                        alt="tag">
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Object</h2>
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Objects</li>
 
-                        <li class="portfolio-nav__item">
-                            <button class="portfolio-nav__btn">
-                                Enviroment
-                            </button>
-                        </li>
+                        <li class="portfolio-nav__item">Enviroment</li>
 
                     </ul>
                 </nav>
