enchange tag animation

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -37,11 +37,13 @@
                 <nav class="portfolio-nav">
                     <ul class="portfolio-nav__list">
 
-                        <li class="portfolio-nav__item">Art</li>
+                        <a href="#" class="portfolio-nav__item">Art</a>
 
-                        <li class="portfolio-nav__item">Characters</li>
+                        <button class="portfolio-nav__item">Characters</button>
 
-                        <li class="portfolio-nav__item">Concept</li>
+                        <li>
+                            <button class="portfolio-nav__item">Concept</button>
+                        </li>
 
                         <li class="portfolio-nav__item">3D</li>
 
