tag change on button

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -36,27 +36,33 @@
                 </h1>
                 <nav class="portfolio-nav">
                     <ul class="portfolio-nav__list">
-
-                        <a href="#" class="portfolio-nav__item">Art</a>
-
-                        <button class="portfolio-nav__item">Characters</button>
-
                         <li>
-                            <button class="portfolio-nav__item">Concept</button>
+                            <button class="portfolio-nav__item portfolio-nav__item--Art">Art</button>
                         </li>
-
-                        <li class="portfolio-nav__item">3D</li>
-
-                        <li class="portfolio-nav__item">Abstract</li>
-
-                        <li class="portfolio-nav__item">Graphic</li>
-
-                        <li class="portfolio-nav__item">HD</li>
-
-                        <li class="portfolio-nav__item">Objects</li>
-
-                        <li class="portfolio-nav__item">Enviroment</li>
-
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--Characters">Characters</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--Concept">Concept</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--3D">3D</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--Abstract">Abstract</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--Graphic">Graphic</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--HD">HD</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--Objects">Objects</button>
+                        </li>
+                        <li>
+                            <button class="portfolio-nav__item portfolio-nav__item--Enviroment">Enviroment</button>
+                        </li>
                     </ul>
                 </nav>
 
