--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -65,15 +65,109 @@
                         </li>
                     </ul>
                 </nav>
-
-
             </div>
-
         </div>
-
     </header>
 
-
+    <section class="gallery">
+        <div class="container">
+            <h1 class="title gallery__title">Gallery</h1>
+            <div class="gallery__list">
+                <a class="gallery__item" href="img/512/0-header1.jpg" >
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header1.avif x1, img/1024/0-header1.avif x2" type="image/avif">
+                        <source src="img/512/0-header1.webp x1, img/1024/0-header1.webp x2" type="image/webp">
+                        <source src="img/512/0-header1.jpg" type="image/jpeg">
+                        <img src="img/512/0-header1.jpg" width="20%" height="30vh" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header2.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header2.webp" type="image/webp">
+                        <source src="img/512/0-header2.jpg" type="image/jpeg">
+                        <img src="img/512/0-header2.jpg" width="20%" height="30vh" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header3.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header3.webp" type="image/webp">
+                        <source src="img/512/0-header3.jpg" type="image/jpeg">
+                        <img src="img/512/0-header3.jpg" width="20%" height="30vh" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header4.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header4.webp" type="image/webp">
+                        <source src="img/512/0-header4.jpg" type="image/jpeg">
+                        <img src="img/512/0-header4.jpg" width="20%" height="30vh" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header5.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header5.webp" type="image/webp">
+                        <source src="img/512/0-header5.jpg" type="image/jpeg">
+                        <img src="img/512/0-header5.jpg" width="300" height="300" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header6.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header6.webp" type="image/webp">
+                        <source src="img/512/0-header6.jpg" type="image/jpeg">
+                        <img src="img/512/0-header6.jpg" width="300" height="300" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header7.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header7.webp" type="image/webp">
+                        <source src="img/512/0-header7.jpg" type="image/jpeg">
+                        <img src="img/512/0-header7.jpg" width="300" height="300" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header9.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header9.webp" type="image/webp">
+                        <source src="img/512/0-header9.jpg" type="image/jpeg">
+                        <img src="img/512/0-header9.jpg" width="300" height="300" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header10.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header10.webp" type="image/webp">
+                        <source src="img/512/0-header10.jpg" type="image/jpeg">
+                        <img src="img/512/0-header10.jpg" alt="Art Gallery">
+                    </picture>
+                </a>
+                <a  class="gallery__item" href="img/512/0-header11.jpg">
+                    <div class="gallery__item-hover">View</div>
+                    <picture>
+                        <source src="img/512/0-header11.webp" type="image/webp">
+                        <source src="img/512/0-header11.jpg" type="image/jpeg">
+                        <img src="img/512/0-header11.jpg" alt="Art Gallery">
+                    </picture>
+                </a>
+                
+                <a href="img/512/2.jpg" class="gallery__item">
+                    <div class="gallery__item-hover">View</div>
+                    <img src="img/512/2.jpg" width="500" height="500" alt="Art Gallery" srcset="img/1024/2.jpg x2">
+                    </picture>
+                </a>
+                <a href="img/512/2.jpg" class="gallery__item">
+                    <div class="gallery__item-hover">View</div>
+                    <img src="img/512/2.jpg" width="500" height="500" alt="Art Gallery" srcset="img/1024/2.jpg x2, img/orign/2.jpg x4">
+                    </picture>
+                </a>
+            </div>
+        </div>
+    </section>
 
     <script src="js/scripts.min.js"></script>
 
