add first img index - 3d

--- a/app/index.html
+++ b/app/index.html
@@ -46,11 +46,11 @@
 
 	<section class="portfolio-section grid">
 		<div class="portfolio-item grid"
-			style="background-image: url('./img/img_.png'); background-image: -webkit-image-set(url('../img/1024/1.webp') 2x, url('../img/512/1.webp') 1x)">
+			style="background-image: url('../img/img_63.png'); background-image: -webkit-image-set(url('../img/img_63.webp') 2x, url('../img/img_63.webp') 1x)">
 			<span class="portfolio-item__title">3D&nbsp;designs</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/2.webp); background-image: srcset(url(img/1024/2.jpg))"><span
+			style="background-image: url(../img/img_14.webp); background-image: srcset(url(img/1024/2.jpg))"><span
 				class="portfolio-item__title">Painting</span></div>
 		<div class="portfolio-item grid"
 			style="background-image: url(img/1024/0-header16.webp); background-image: srcset(url(img/1024/0-header16.jpg))">
