upgrade img index

--- a/app/index.html
+++ b/app/index.html
@@ -31,10 +31,10 @@
 	<header class="main-header grid">
 		<div class="header-content grid">
 			<!-- <picture class="header-content__img">
-				<source src="img/1024/0-header1.avif 1x, img/orign/0-header1.avif 2x" type="image/avif">
-				<source src="img/1024/0-header1.webp 1x, img/orign/0-header1.webp 2x" type="image/webp">
-				<source src="img/1024/0-header1.jpg 1x, img/orign/0-header1.jpg 2x" type="image/jpg">
-				<img src="img/1024/0-header1.jpg" srcset="img/orign/0-header1.jpg 2x" alt="Content images">
+				<source src="./img/0-header1.avif 1x, img/orign/0-header1.avif 2x" type="image/avif">
+				<source src="./img/0-header1.webp 1x, img/orign/0-header1.webp 2x" type="image/webp">
+				<source src="./img/0-header1.jpg 1x, img/orign/0-header1.jpg 2x" type="image/jpg">
+				<img src="./img/0-header1.jpg" srcset="img/orign/0-header1.jpg 2x" alt="Content images">
 			</picture> -->
 			<h1 class="header-content__title">Create content for&nbsp;you</h1>
 			<div class="header-buttons">
@@ -46,36 +46,36 @@
 
 	<section class="portfolio-section grid">
 		<div class="portfolio-item grid"
-			style="background-image: url('../img/img_63.png'); background-image: -webkit-image-set(url('../img/img_63.webp') 2x, url('../img/img_63.webp') 1x)">
+			style="background-image: url('./img/img_63.png'); background-image: -webkit-image-set(url('./img/img_63.webp') 2x, url('./img/img_63.webp') 1x)">
 			<span class="portfolio-item__title">3D&nbsp;designs</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(../img/img_14.webp); background-image: srcset(url(img/1024/2.jpg))"><span
+			style="background-image: url(./img/img_14.webp); background-image: srcset(url(./img/img_14.jpg))"><span
 				class="portfolio-item__title">Painting</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/0-header16.webp); background-image: srcset(url(img/1024/0-header16.jpg))">
+			style="background-image: url(./img/img_50.webp); background-image: srcset(url(./img/img_50.jpg))">
 			<span class="portfolio-item__title">Characters</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/4.webp); background-image: srcset(url(img/1024/4.jpg))"><span
+			style="background-image: url(./img/10.webp); background-image: srcset(url(./img/10.jpg))"><span
 				class="portfolio-item__title">Art style</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/DimaFox_flower_white_petals.webp); background-image: srcset(url(img/1024/DimaFox_flower_white_petals.jpg))">
+			style="background-image: url(./img/img_27.webp); background-image: srcset(url(./img/img_27.jpg))">
 			<span class="portfolio-item__title">Photo style</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/DmitriyFox_character_4.webp); background-image: srcset(url(img/1024/DmitriyFox_character_4.jpg))">
+			style="background-image: url(./img/img_39.webp); background-image: srcset(url(./img/img_39.jpg))">
 			<span class="portfolio-item__title">Graphics</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/7.webp); background-image: srcset(url(img/1024/7.jpg))"><span
+			style="background-image: url(./img/img_27.webp); background-image: srcset(url(./img/img_27.jpg))"><span
 				class="portfolio-item__title">Nature art</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/0-header14.webp); background-image: srcset(url(img/1024/0-header14.jpg))">
+			style="background-image: url(./img/img_3.webp); background-image: srcset(url(./img/img_3.jpg))">
 			<span class="portfolio-item__title">Devian Art</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/9.webp); background-image: srcset(url(img/1024/9.jpg));"><span
+			style="background-image: url(./img/img_44.webp); background-image: srcset(url(./img/img_44.jpg));"><span
 				class="portfolio-item__title">Background</span></div>
 		<div class="buttoncase portfolio-section__buttoncase text-center">
 			<a href="portfolio.html" class="button">View portfolio</a>
@@ -98,11 +98,11 @@
 			<div class="ready-right">
 				<picture>
 					<source type="image/avif"
-						srcset="img/1024/DmitriyFox12_foxCharacter.avif 1x, img/orign/DmitriyFox12_foxCharacter.avif 2x">
+						srcset="./img/DmitriyFox12_foxCharacter.avif 1x, img/orign/DmitriyFox12_foxCharacter.avif 2x">
 					<source type="image/webp"
-						srcset="img/1024/DmitriyFox12_foxCharacter.webp 1x, img/orign/DmitriyFox12_foxCharacter.webp 2x">
+						srcset="./img/DmitriyFox12_foxCharacter.webp 1x, img/orign/DmitriyFox12_foxCharacter.webp 2x">
 					<source type="image/jpeg"
-						srcset="img/1024/DmitriyFox12_foxCharacter.jpg 1x, img/orign/DmitriyFox12_foxCharacter.jpg 2x">
+						srcset="./img/DmitriyFox12_foxCharacter.jpg 1x, img/orign/DmitriyFox12_foxCharacter.jpg 2x">
 					<img class="ready-right__img img-responsive" src="img/512/DmitriyFox12_foxCharacter.jpg"
 						srcset="img/orign/DmitriyFox18_apple_Photography.jpg 2x" width="540" height="390" alt="Example">
 				</picture>
@@ -135,7 +135,7 @@
 			<div class="blog-home grid">
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
-						style="background-image: url(img/1024/0-header2.webp); background-image: image-set(url(img/1024/0-header2.jpg) 1x);"></span>
+						style="background-image: url(./img/0-header2.webp); background-image: image-set(url(./img/0-header2.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
 						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">We have been cooperating with a manufacturer of wastewater
@@ -146,7 +146,7 @@
 				</a>
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
-						style="background-image: url(img/1024/0-header3.webp); background-image: image-set(url(img/1024/0-header3.jpg) 1x);"></span>
+						style="background-image: url(./img/0-header3.webp); background-image: image-set(url(./img/0-header3.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
 						<h3 class="blog-item-content__title">Our work in kids product</h3>
 						<p class="blog-item-content__text">For children's magazines and books, it was required to create
@@ -156,9 +156,9 @@
 				</a>
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
-						style="background-image: url('../img/512/DimaFox1_Old_empty_scroll_sepia_tone.jpg'); 
-						background-image: -webkit-image-set(url('../img/512/DimaFox1_Old_empty_scroll_sepia_tone.webp') 1x, url('../img/1024/DimaFox1_Old_empty_scroll_sepia_tone.webp') 2x);
-						background-image: image-set(url('../img/1024/DimaFox1_Old_empty_scroll_sepia_tone.avif') type('image/avif') 2x, url('../img/512/DimaFox1_Old_empty_scroll_sepia_tone.avif') type('image/avif') 1x, url('../img/1024/DimaFox1_Old_empty_scroll_sepia_tone.webp') type('image/webp') 2x, url('../img/512/DimaFox1_Old_empty_scroll_sepia_tone.webp') type('image/webp') 1x,url('../img/1024/DimaFox1_Old_empty_scroll_sepia_tone.jpg') type('image/jpg') 2x, url('../img/512/DimaFox1_Old_empty_scroll_sepia_tone.jpg') type('image/jpg') 1x
+						style="background-image: url('./img/512/DimaFox1_Old_empty_scroll_sepia_tone.jpg'); 
+						background-image: -webkit-image-set(url('./img/512/DimaFox1_Old_empty_scroll_sepia_tone.webp') 1x, url('././img/DimaFox1_Old_empty_scroll_sepia_tone.webp') 2x);
+						background-image: image-set(url('././img/DimaFox1_Old_empty_scroll_sepia_tone.avif') type('image/avif') 2x, url('./img/512/DimaFox1_Old_empty_scroll_sepia_tone.avif') type('image/avif') 1x, url('././img/DimaFox1_Old_empty_scroll_sepia_tone.webp') type('image/webp') 2x, url('./img/512/DimaFox1_Old_empty_scroll_sepia_tone.webp') type('image/webp') 1x,url('././img/DimaFox1_Old_empty_scroll_sepia_tone.jpg') type('image/jpg') 2x, url('./img/512/DimaFox1_Old_empty_scroll_sepia_tone.jpg') type('image/jpg') 1x
 							);"></span>
 					<span class="blog-item-content grid">
 						<h3 class="blog-item-content__title">Black and white</h3>
@@ -168,7 +168,7 @@
 				</a>
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
-						style="background-image: url(img/1024/0-header6.webp); background-image: image-set(url(img/1024/0-header6.jpg) 1x);"></span>
+						style="background-image: url(./img/0-header6.webp); background-image: image-set(url(./img/0-header6.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
 						<h3 class="blog-item-content__title">From sketch and concept to final</h3>
 						<p class="blog-item-content__text">Often the creation of games and virtual worlds requires
@@ -178,7 +178,7 @@
 				</a>
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
-						style="background-image: url(img/1024/0-header7.webp);background-image: image-set(url(img/1024/0-header7.jpg) 1x);"></span>
+						style="background-image: url(./img/0-header7.webp);background-image: image-set(url(./img/0-header7.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
 						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -187,7 +187,7 @@
 				</a>
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
-						style="background-image: url(img/1024/0-header9.webp);background-image: image-set(url(img/1024/0-header9.jpg) 1x);"></span>
+						style="background-image: url(./img/0-header9.webp);background-image: image-set(url(./img/0-header9.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
 						<h3 class="blog-item-content__title">Our work in familly business offer</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
