--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -17,10 +17,13 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Portfolio Lisin Dmitriy</title>
     <link rel="stylesheet" href="css/main.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    
     <header class="header portfolio-header">
         <div class="container">
             <div class="portfolio">
