--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,8 @@
 			</picture> -->
 			<h1 class="header-content__title">Create content for&nbsp;you</h1>
 			<div class="header-buttons">
-				<a href="portfolio.html" class="button">Follow</a>
-				<a href="portfolio.html" class="button button--grey">Go Home</a>
+				<a href="portfolio.html" class="button header-buttons__btn">Follow</a>
+				<a href="portfolio.html" class="button header-buttons__btn button--grey">Go Home</a>
 			</div>
 		</div>
 	</header>
