continue work on the slider css

--- a/app/index.html
+++ b/app/index.html
@@ -50,15 +50,15 @@
 			<span class="portfolio-item__title">3D&nbsp;designs</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url('./img/@1024/54_1024.jpg'); background-image: srcset(url('./img/@1024/54_1024.webp'))"><span
-				class="portfolio-item__title">Painting</span></div>
+			style="background-image: url('./img/@1024/54_1024.jpg'); background-image: srcset(url('./img/@1024/54_1024.webp'))">
+			<span class="portfolio-item__title">Painting</span></div>
 		<div class="portfolio-item grid"
 			style="background-image: url('./img/@1024/30_1024.jpg'); background-image: srcset(url('./img/@1024/30_1024.webp'))">
 			<span class="portfolio-item__title">Graphics</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url('./img/@1024/57_1024.jpg'); background-image: srcset(url('./img/@1024/57_1024.webp'))"><span
-				class="portfolio-item__title">Art style</span></div>
+			style="background-image: url('./img/@1024/57_1024.jpg'); background-image: srcset(url('./img/@1024/57_1024.webp'))">
+			<span class="portfolio-item__title">Art style</span></div>
 		<div class="portfolio-item grid"
 			style="background-image: url('./img/@1024/42_1024.jpg'); background-image: srcset(url('./img/@1024/42_1024.webp'))">
 			<span class="portfolio-item__title">Photo style</span>
@@ -68,15 +68,15 @@
 			<span class="portfolio-item__title">Characters</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url('./img/@1024/36_1024.jpg'); background-image: srcset(url('./img/@1024/36_1024.webp'))"><span
-				class="portfolio-item__title">Nature art</span></div>
+			style="background-image: url('./img/@1024/36_1024.jpg'); background-image: srcset(url('./img/@1024/36_1024.webp'))">
+			<span class="portfolio-item__title">Nature art</span></div>
 		<div class="portfolio-item grid"
 			style="background-image: url('./img/@1024/65_1024.jpg'); background-image: srcset(url('./img/@1024/65_1024.webp'))">
 			<span class="portfolio-item__title">Devian Art</span>
 		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url('./img/@1024/47_1024.jpg'); background-image: srcset(url('./img/@1024/47_1024.webp'));"><span
-				class="portfolio-item__title">Background</span></div>
+			style="background-image: url('./img/@1024/47_1024.jpg'); background-image: srcset(url('./img/@1024/47_1024.webp'));">
+			<span class="portfolio-item__title">Background</span></div>
 		<div class="buttoncase portfolio-section__buttoncase text-center">
 			<a href="portfolio.html" class="button">View portfolio</a>
 		</div>
